Fix content overflow and adjust misc styles for product descriptions
Sets a max-width for images and iframe content in product descriptions,
and adds styles for other content.

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -235,6 +235,23 @@
   font-size: 15px
   line-height: 30px
   text-transform: none
+  
+  img, iframe
+    display: block
+    max-width: 100%
+    
+  ol, ul
+    margin: 1em 0 0 20px
+    padding: 0
+  
+  ol
+    list-style-type: decimal
+    
+  ul
+    list-style-type: disc
+      
+  a
+    text-decoration: underline
 
 @keyframes spinner
   to
